--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "remove-markdown": "^0.5.0",
     "sharp": "^0.31.3",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/remove-markdown": "^0.3.1"
   }
 }
